--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title> Blog 360viagens</title>
   </head>
 
   <body>
     <header class="header">
-      <a href="/">360 viagens</a>
+      <a href="/">Blog 360 viagens</a>
 
       <nav>
         <ul class="menu">
